Add contact form for user inquiries Add contact form with SMS opt-in

--- a/index.html
+++ b/index.html
@@ -40,7 +40,96 @@
         <p>Typical Response Time: 24–48 hours (Monday–Friday)</p>
         <p>If you are writing about a technical issue, please include your device model (for example, iPhone 14) and your iOS version if possible.</p>
     </div>
+    <div class="section" id="contact">
+  <h2>Contact Us</h2>
+  <p>If you have questions about UpliftMe or need support, you can reach Noble Edge Digital using the form below.</p>
 
+  <form action="mailto:nobleedgedigital@gmail.com" method="post" enctype="text/plain">
+    <p>
+      <label for="name">Name</label><br>
+      <input type="text" id="name" name="name" required>
+    </p>
+
+    <p>
+      <label for="email">Email</label><br>
+      <input type="email" id="email" name="email" required>
+    </p>
+
+    <p>
+      <label for="phone">Phone Number</label><br>
+      <input type="tel" id="phone" name="phone" placeholder="555-555-5555" required>
+    </p>
+
+    <p>
+      <label for="message">Message</label><br>
+      <textarea id="message" name="message" rows="4" required></textarea>
+    </p>
+
+    <p>
+      <label>
+        <input type="checkbox" id="sms-consent" name="sms_consent" required>
+        Noble Edge Digital would like your consent to send text message communications related to your inquiries and customer support. Message &amp; data rates may apply. Message frequency varies. Reply STOP to opt out at any time, or HELP for assistance.
+      </label>
+    </p>
+
+    <p>
+      <small>
+        By submitting this form, you agree to our
+        <a href="privacy.html">Privacy Policy</a> and
+        <a href="terms.html">Terms of Use</a>.
+      </small>
+    </p>
+
+    <p>
+      <button type="submit">Submit</button>
+    </p>
+  </form>
+</div>
+<div class="section" id="contact">
+  <h2>Contact Us</h2>
+  <p>If you have questions about UpliftMe or need support, you can reach Noble Edge Digital using the form below.</p>
+
+  <form action="mailto:nobleedgedigital@gmail.com" method="post" enctype="text/plain">
+    <p>
+      <label for="name">Name</label><br>
+      <input type="text" id="name" name="name" required>
+    </p>
+
+    <p>
+      <label for="email">Email</label><br>
+      <input type="email" id="email" name="email" required>
+    </p>
+
+    <p>
+      <label for="phone">Phone Number</label><br>
+      <input type="tel" id="phone" name="phone" placeholder="555-555-5555" required>
+    </p>
+
+    <p>
+      <label for="message">Message</label><br>
+      <textarea id="message" name="message" rows="4" required></textarea>
+    </p>
+
+    <p>
+      <label>
+        <input type="checkbox" id="sms-consent" name="sms_consent" required>
+        Noble Edge Digital would like your consent to send text message communications related to your inquiries and customer support. Message &amp; data rates may apply. Message frequency varies. Reply STOP to opt out at any time or HELP for assistance.
+      </label>
+    </p>
+
+    <p>
+      <small>
+        By submitting this form, you agree to our
+        <a href="privacy.html">Privacy Policy</a> and
+        <a href="terms.html">Terms of Use</a>.
+      </small>
+    </p>
+
+    <p>
+      <button type="submit">Submit</button>
+    </p>
+  </form>
+</div>
     <div class="section">
         <h2>Frequently Asked Questions</h2>
 
